# rgt-order-system

./: .gitignore  README.md  docker-compose-dev.yml  start.sh  stop.sh
backend/: .env  Dockerfile  README.md  docker-compose-dev.yml  main.py  pyproject.toml  requirements.txt
backend/app/: dependencies.py  global_services.py
backend/app/api/routes/: auth.py  menu.py  order.py  socket.py
backend/app/core/: config.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/messageQueue/: connection.py  consumer.py  producer.py  queue_config.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: auth_service.py  connection_monitoring_service.py  redis_service.py  retry_processer.py  socket_service.py
backend/app/utils/: setup_coloer_log.py
backend/db/: .env  Dockerfile  init-db.sh
backend/postman/: RGT.postman_collection.json
backend/queue/: Dockerfile  rabbitmq-init.sh  rabbitmq.conf
backend/redis/: Dockerfile  redis.conf
frontend/react-app/: .prettierrc  Dockerfile  README.md  global.d.ts  package.json  tsconfig.json
frontend/react-app/src/: index.css  index.tsx
infra/: .terraform.lock.hcl  apply.sh  fetch_ssm_key.sh  main.tf  outputs.tf  ssh_to_rgt.sh  terraform.tfvars  variables.tf
infra/modules/ec2/: main.tf  outputs.tf  variables.tf
infra/modules/gateway/: main.tf  outputs.tf  variables.tf
infra/modules/iam_role/: main.tf  outputs.tf  variables.tf
infra/modules/key_pairs/: main.tf  outputs.tf  variables.tf
infra/modules/security_groups/: main.tf  outputs.tf  variables.tf
infra/modules/ssm/: main.tf  (+1 more)
(+93 files in other folders)
